--- a/src/pages/blog/editor/index.module.css
+++ b/src/pages/blog/editor/index.module.css
@@ -3,7 +3,7 @@
   border: 1px solid #ccc;
 }
 .editor-class {
-  background-color: lightgrey;
+  background-color: white;
   padding: 1rem;
   border: 1px solid #ccc;
   min-height: 50vh;
